--- a/experiment/back_tracking_search.ipynb
+++ b/experiment/back_tracking_search.ipynb
@@ -2,70 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using backend: pytorch\n",
-      "[22:01:11] /opt/dgl/src/runtime/tensordispatch.cc:43: TensorDispatcher: dlopen failed: /home/zikunli/anaconda3/envs/quantum/lib/python3.9/site-packages/dgl/tensoradapter/pytorch/libtensoradapter_pytorch_1.10.2.so: cannot open shared object file: No such file or directory\n"
-     ]
-    }
-   ],
-   "source": [
-    "# A warning message from DGL will appear which seems to be related to an open issue in the DGL library, \n",
-    "# it won't hurt the execution of the program, please ignore it.\n",
-    "import quartz"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "quartz_context = quartz.QuartzContext(gate_set=['h', 'cx', 't', 'tdg'], filename='../bfs_verified_simplified.json')\n",
-    "parser = quartz.PyQASMParser(context=quartz_context)\n",
-    "my_dag = parser.load_qasm(filename=\"barenco_tof_3_opt_path/subst_history_39.qasm\")\n",
-    "init_graph = quartz.PyGraph(context=quartz_context, dag=my_dag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_graph = init_graph.apply_xfer(xfer=quartz_context.get_xfer_from_id(id=993), node=init_graph.get_node_from_id(id=42))\n",
-    "new_graph"
+    "import quartz"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Graph(num_nodes=58, num_edges=154,\n",
-       "      ndata_schemes={'gate_type': Scheme(shape=(), dtype=torch.int64)}\n",
-       "      edata_schemes={'reversed': Scheme(shape=(), dtype=torch.int64), 'src_idx': Scheme(shape=(), dtype=torch.int64), 'dst_idx': Scheme(shape=(), dtype=torch.int64)})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dgl import save_graphs, load_graphs\n",
-    "save_graphs('from_graphs.dat', [init_graph.to_dgl_graph()])\n",
-    "g = load_graphs('from_graphs.dat')\n",
-    "# g[0].ndata\n",
-    "g[0][0]"
+    "quartz_context = quartz.QuartzContext(gate_set=['h', 'cx', 'x', 'rz', 'add'], filename='ecc_set/nam.json.ecc')\n",
+    "init_graph = quartz.PyGraph.from_qasm(context=quartz_context, filename='nam_circs/barenco_tof_3.qasm')"
    ]
   },
   {
@@ -77,70 +28,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3259, 3355]\n",
-      "[3337, 3461]\n",
-      "[3321, 3345, 3385]\n",
-      "[1725, 3337, 3461]\n",
-      "[3363]\n",
-      "[1907, 3337, 3461]\n",
-      "[368, 1351, 2098, 3321, 3345, 3385]\n",
-      "[398, 440, 441, 442, 444, 1091, 1172, 1231, 1232, 1233, 1235, 1471, 1472, 1473, 1475, 3337, 3461]\n",
-      "[3287, 3288, 3337, 3430, 3461, 3490]\n",
-      "[3363, 3583]\n",
-      "[3321, 3345, 3385]\n",
-      "[3224, 3337, 3360, 3461]\n",
-      "[3223, 3359]\n",
-      "[3241]\n",
-      "[3259, 3355]\n",
-      "[3337, 3461]\n",
-      "[3321, 3345, 3385]\n",
-      "[1725, 3337, 3461]\n",
-      "[3363]\n",
-      "[1907, 3337, 3461]\n",
-      "[368, 1351, 2098, 3321, 3345, 3385]\n",
-      "[398, 440, 441, 442, 444, 1091, 1172, 1231, 1232, 1233, 1235, 1471, 1472, 1473, 1475, 3337, 3461]\n",
-      "[3287, 3288, 3337, 3430, 3461, 3490]\n",
-      "[]\n",
-      "[2613, 3321, 3345, 3385]\n",
-      "[3291, 3383]\n",
-      "[1205, 1477, 1817, 2105, 3224, 3337, 3360, 3461]\n",
-      "[1725, 3337, 3461]\n",
-      "[3223, 3359]\n",
-      "[3223, 3359]\n",
-      "[3363]\n",
-      "[3337, 3461]\n",
-      "[3321, 3345, 3385]\n",
-      "[1557, 1559, 1725, 3337, 3461]\n",
-      "[1241, 3363]\n",
-      "[440, 441, 442, 444, 1231, 1232, 1233, 1235, 1281, 1471, 1472, 1473, 1475, 1815, 2595, 3337, 3461]\n",
-      "[3123, 3124, 3210, 3326, 3337, 3461]\n",
-      "[]\n",
-      "[3363, 3511]\n",
-      "[]\n",
-      "[3155, 3309, 3337, 3461]\n",
-      "[]\n",
-      "[3131]\n",
-      "[3259, 3355]\n",
-      "[1725, 3337, 3461]\n",
-      "[3363]\n",
-      "[3337, 3461]\n",
-      "[3321, 3345, 3385]\n",
-      "[1557, 1559, 1725, 3337, 3461]\n",
-      "[1241, 3363]\n",
-      "[440, 441, 442, 444, 1231, 1232, 1233, 1235, 1281, 1471, 1472, 1473, 1475, 1815, 2595, 3337, 3461]\n",
-      "[3123, 3124, 3210, 3326, 3337, 3461]\n",
-      "[]\n",
-      "[3363, 3511]\n",
-      "[]\n",
-      "[3155, 3309, 3337, 3461]\n",
-      "[]\n",
-      "[]\n"
+      "[80, 82, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 2617, 2637, 2665, 8668]\n",
+      "[94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "[98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "[98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[94, 206, 208, 210, 212, 8668]\n",
+      "[96, 98, 100, 102, 8668]\n",
+      "[97, 103, 8668]\n",
+      "[169, 174, 8668]\n",
+      "[80, 82, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 2617, 2637, 2665, 8668]\n",
+      "[94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "[98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "[98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "[8668]\n",
+      "[94, 206, 208, 210, 212, 8668]\n",
+      "[78, 84, 8668]\n",
+      "[96, 98, 100, 102, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[97, 103, 8668]\n",
+      "[97, 103, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 2617, 2637, 2665, 8668]\n",
+      "[94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "[98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "[98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "[8668]\n",
+      "[94, 206, 208, 210, 212, 8668]\n",
+      "[8668]\n",
+      "[96, 98, 100, 102, 8668]\n",
+      "[8668]\n",
+      "[169, 174, 8668]\n",
+      "[80, 82, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 8668]\n",
+      "[94, 210, 8668]\n",
+      "[98, 100, 2617, 2637, 2665, 8668]\n",
+      "[94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "[98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "[98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "[8668]\n",
+      "[94, 206, 208, 210, 212, 8668]\n",
+      "[8668]\n",
+      "[96, 98, 100, 102, 8668]\n",
+      "[8668]\n",
+      "[8668]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "209"
+       "306"
       ]
      },
      "execution_count": 4,
@@ -179,133 +130,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4990000: minimum gate count is 56, correctness: True\n",
-      "4980000: minimum gate count is 52, correctness: True\n",
-      "4970000: minimum gate count is 52, correctness: True\n",
-      "4960000: minimum gate count is 52, correctness: True\n",
-      "4950000: minimum gate count is 52, correctness: True\n",
-      "4940000: minimum gate count is 46, correctness: True\n",
-      "4930000: minimum gate count is 46, correctness: True\n",
-      "4920000: minimum gate count is 46, correctness: True\n",
-      "4910000: minimum gate count is 46, correctness: True\n",
-      "4900000: minimum gate count is 46, correctness: True\n",
-      "4890000: minimum gate count is 46, correctness: True\n",
-      "4880000: minimum gate count is 46, correctness: True\n",
-      "4870000: minimum gate count is 46, correctness: True\n",
-      "4860000: minimum gate count is 46, correctness: True\n",
-      "4850000: minimum gate count is 46, correctness: True\n",
-      "4840000: minimum gate count is 46, correctness: True\n",
-      "4830000: minimum gate count is 46, correctness: True\n",
-      "4820000: minimum gate count is 46, correctness: True\n",
-      "4810000: minimum gate count is 46, correctness: True\n",
-      "4800000: minimum gate count is 46, correctness: True\n",
-      "4790000: minimum gate count is 46, correctness: True\n",
-      "4780000: minimum gate count is 46, correctness: True\n",
-      "4770000: minimum gate count is 46, correctness: True\n",
-      "4760000: minimum gate count is 46, correctness: True\n",
-      "4750000: minimum gate count is 46, correctness: True\n",
-      "4740000: minimum gate count is 46, correctness: True\n",
-      "4730000: minimum gate count is 46, correctness: True\n",
-      "4720000: minimum gate count is 46, correctness: True\n",
-      "4710000: minimum gate count is 46, correctness: True\n",
-      "4700000: minimum gate count is 46, correctness: True\n",
-      "4690000: minimum gate count is 46, correctness: True\n",
-      "4680000: minimum gate count is 46, correctness: True\n",
-      "4670000: minimum gate count is 46, correctness: True\n",
-      "4660000: minimum gate count is 46, correctness: True\n",
-      "4650000: minimum gate count is 46, correctness: True\n",
-      "4640000: minimum gate count is 46, correctness: True\n",
-      "4630000: minimum gate count is 46, correctness: True\n",
-      "4620000: minimum gate count is 46, correctness: True\n",
-      "4610000: minimum gate count is 46, correctness: True\n",
-      "4600000: minimum gate count is 46, correctness: True\n",
-      "4590000: minimum gate count is 46, correctness: True\n",
-      "4580000: minimum gate count is 46, correctness: True\n",
-      "4570000: minimum gate count is 46, correctness: True\n",
-      "4560000: minimum gate count is 46, correctness: True\n",
-      "4550000: minimum gate count is 46, correctness: True\n",
-      "4540000: minimum gate count is 45, correctness: True\n",
-      "4530000: minimum gate count is 45, correctness: True\n",
-      "4520000: minimum gate count is 45, correctness: True\n",
-      "4510000: minimum gate count is 45, correctness: True\n",
-      "4500000: minimum gate count is 45, correctness: True\n",
-      "4490000: minimum gate count is 45, correctness: True\n",
-      "4480000: minimum gate count is 45, correctness: True\n",
-      "4470000: minimum gate count is 45, correctness: True\n",
-      "4460000: minimum gate count is 45, correctness: True\n",
-      "4450000: minimum gate count is 45, correctness: True\n",
-      "4440000: minimum gate count is 45, correctness: True\n",
-      "4430000: minimum gate count is 45, correctness: True\n",
-      "4420000: minimum gate count is 45, correctness: True\n",
-      "4410000: minimum gate count is 45, correctness: True\n",
-      "4400000: minimum gate count is 45, correctness: True\n",
-      "4390000: minimum gate count is 45, correctness: True\n",
-      "4380000: minimum gate count is 45, correctness: True\n",
-      "4370000: minimum gate count is 45, correctness: True\n",
-      "4360000: minimum gate count is 45, correctness: True\n",
-      "4350000: minimum gate count is 45, correctness: True\n",
-      "4340000: minimum gate count is 45, correctness: True\n",
-      "4330000: minimum gate count is 45, correctness: True\n",
-      "4320000: minimum gate count is 45, correctness: True\n",
-      "4310000: minimum gate count is 45, correctness: True\n",
-      "4300000: minimum gate count is 45, correctness: True\n",
-      "4290000: minimum gate count is 45, correctness: True\n",
-      "4280000: minimum gate count is 45, correctness: True\n",
-      "4270000: minimum gate count is 45, correctness: True\n",
-      "4260000: minimum gate count is 45, correctness: True\n",
-      "4250000: minimum gate count is 45, correctness: True\n",
-      "4240000: minimum gate count is 45, correctness: True\n",
-      "4230000: minimum gate count is 45, correctness: True\n",
-      "4220000: minimum gate count is 45, correctness: True\n",
-      "4210000: minimum gate count is 45, correctness: True\n",
-      "4200000: minimum gate count is 45, correctness: True\n",
-      "4190000: minimum gate count is 45, correctness: True\n",
-      "4180000: minimum gate count is 45, correctness: True\n",
-      "4170000: minimum gate count is 45, correctness: True\n",
-      "4160000: minimum gate count is 45, correctness: True\n",
-      "4150000: minimum gate count is 45, correctness: True\n",
-      "4140000: minimum gate count is 45, correctness: True\n",
-      "4130000: minimum gate count is 45, correctness: True\n",
-      "4120000: minimum gate count is 45, correctness: True\n",
-      "4110000: minimum gate count is 45, correctness: True\n",
-      "4100000: minimum gate count is 45, correctness: True\n",
-      "4090000: minimum gate count is 45, correctness: True\n",
-      "4080000: minimum gate count is 45, correctness: True\n",
-      "4070000: minimum gate count is 45, correctness: True\n",
-      "4060000: minimum gate count is 45, correctness: True\n",
-      "4050000: minimum gate count is 45, correctness: True\n",
-      "4040000: minimum gate count is 45, correctness: True\n",
-      "4030000: minimum gate count is 45, correctness: True\n",
-      "4020000: minimum gate count is 45, correctness: True\n",
-      "4010000: minimum gate count is 45, correctness: True\n",
-      "4000000: minimum gate count is 45, correctness: True\n",
-      "3990000: minimum gate count is 43, correctness: True\n",
-      "3980000: minimum gate count is 40, correctness: True\n",
-      "3970000: minimum gate count is 40, correctness: True\n",
-      "3960000: minimum gate count is 40, correctness: True\n",
-      "3950000: minimum gate count is 40, correctness: True\n",
-      "3940000: minimum gate count is 40, correctness: True\n",
-      "3930000: minimum gate count is 40, correctness: True\n",
-      "3920000: minimum gate count is 40, correctness: True\n",
-      "3910000: minimum gate count is 40, correctness: True\n",
-      "3900000: minimum gate count is 40, correctness: True\n",
-      "3890000: minimum gate count is 40, correctness: True\n",
-      "3880000: minimum gate count is 40, correctness: True\n",
-      "3870000: minimum gate count is 40, correctness: True\n",
-      "3860000: minimum gate count is 40, correctness: True\n",
-      "3850000: minimum gate count is 40, correctness: True\n",
-      "3840000: minimum gate count is 40, correctness: True\n",
-      "3830000: minimum gate count is 40, correctness: True\n",
-      "3820000: minimum gate count is 40, correctness: True\n",
-      "3810000: minimum gate count is 40, correctness: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Optimizing with BFS\n",
     "import heapq\n",
@@ -341,6 +166,8 @@
     "        appliable_xfers = appliable_xfers_nodes[i]\n",
     "        for xfer in appliable_xfers:\n",
     "            new_graph = first_candidate.apply_xfer(xfer=quartz_context.get_xfer_from_id(id=xfer), node=node)\n",
+    "            if not check(new_graph):\n",
+    "                print('Error')\n",
     "            new_hash = new_graph.hash()\n",
     "            if new_hash not in hash_set:\n",
     "                hash_set.add(new_hash)\n",
@@ -357,11 +184,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5cf248733d409ee2d3396b673fb667db69ceca2c5535c00dab670ead284bfb2d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('quantum': conda)",
+   "display_name": "Python 3.9.12 ('quantum')",
    "language": "python",
    "name": "python3"
   },
@@ -375,9 +199,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "96b51c792a6989d4839d314c065544fba67e314d7b530d0571cf3625bc1ceb7e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
