Deleted some contents in test_apply_xfer.ipynb

--- a/experiment/test_apply_xfer.ipynb
+++ b/experiment/test_apply_xfer.ipynb
@@ -2,97 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A warning message from DGL will appear which seems to be related to an open issue in the DGL library, \n",
-    "# it won't hurt the execution of the program, please ignore it.\n",
     "import quartz\n",
-    "quartz_context = quartz.QuartzContext(gate_set=['h', 'cx', 't', 'tdg'], filename='../bfs_verified_simplified.json', no_increase=True)\n",
-    "parser = quartz.PyQASMParser(context=quartz_context)\n",
-    "# my_dag = parser.load_qasm(filename=\"barenco_tof_3_opt_path/subst_history_39.qasm\")\n",
-    "my_dag = parser.load_qasm(filename='near_56.qasm')\n",
-    "my_dag.num_qubits, my_dag.num_gates\n",
-    "my_graph = quartz.PyGraph(context=quartz_context, dag=my_dag)"
+    "quartz_context = quartz.QuartzContext(gate_set=['h', 'cx', 'x', 'rz', 'add'], filename='ecc_set/nam.json.ecc', no_increase=False)\n",
+    "my_graph = quartz.PyGraph.from_qasm(context=quartz_context, filename='nam_circs/barenco_tof_3.qasm')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[2839, 2958, 3164]\n",
-      "[3164]\n",
-      "[3015, 3071, 3164]\n",
-      "[428, 429, 1117, 1118, 1304, 1305, 3164]\n",
-      "[3164]\n",
-      "[2896, 2897, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[428, 429, 1117, 1118, 1304, 1305, 3164]\n",
-      "[1072, 1526, 1709, 2896, 2897, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[61, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[1956, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[2839, 2958, 3164]\n",
-      "[3164]\n",
-      "[926, 927, 928, 3164]\n",
-      "[2775, 2916, 3164]\n",
-      "[428, 429, 1117, 1118, 1304, 1305, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[2839, 2958, 3164]\n",
-      "[3164]\n",
-      "[2838, 2957, 3164]\n",
-      "[2839, 2958, 3164]\n",
-      "[3164]\n",
-      "[2838, 2957, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[428, 429, 1117, 1118, 1304, 1305, 3164]\n",
-      "[2746, 2747, 2826, 2929, 3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[3164]\n",
-      "[2774, 2915, 3164]\n",
-      "[3164]\n",
-      "[3164]\n"
+      "0 [80, 82, 8668]\n",
+      "1 [98, 100, 8668]\n",
+      "2 [94, 210, 8668]\n",
+      "3 [98, 100, 8668]\n",
+      "4 [94, 210, 8668]\n",
+      "5 [98, 100, 2617, 2637, 2665, 8668]\n",
+      "6 [94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "7 [98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "8 [98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "9 [94, 210, 8668]\n",
+      "10 [94, 206, 208, 210, 212, 8668]\n",
+      "11 [96, 98, 100, 102, 8668]\n",
+      "12 [97, 103, 8668]\n",
+      "13 [169, 174, 8668]\n",
+      "14 [80, 82, 8668]\n",
+      "15 [98, 100, 8668]\n",
+      "16 [94, 210, 8668]\n",
+      "17 [98, 100, 8668]\n",
+      "18 [94, 210, 8668]\n",
+      "19 [98, 100, 2617, 2637, 2665, 8668]\n",
+      "20 [94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "21 [98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "22 [98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "23 [8668]\n",
+      "24 [94, 206, 208, 210, 212, 8668]\n",
+      "25 [78, 84, 8668]\n",
+      "26 [96, 98, 100, 102, 8668]\n",
+      "27 [98, 100, 8668]\n",
+      "28 [97, 103, 8668]\n",
+      "29 [97, 103, 8668]\n",
+      "30 [94, 210, 8668]\n",
+      "31 [98, 100, 8668]\n",
+      "32 [94, 210, 8668]\n",
+      "33 [98, 100, 2617, 2637, 2665, 8668]\n",
+      "34 [94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "35 [98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "36 [98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "37 [8668]\n",
+      "38 [94, 206, 208, 210, 212, 8668]\n",
+      "39 [8668]\n",
+      "40 [96, 98, 100, 102, 8668]\n",
+      "41 [8668]\n",
+      "42 [169, 174, 8668]\n",
+      "43 [80, 82, 8668]\n",
+      "44 [98, 100, 8668]\n",
+      "45 [94, 210, 8668]\n",
+      "46 [98, 100, 8668]\n",
+      "47 [94, 210, 8668]\n",
+      "48 [98, 100, 2617, 2637, 2665, 8668]\n",
+      "49 [94, 210, 2019, 2023, 2769, 7026, 7027, 8668]\n",
+      "50 [98, 100, 8320, 8321, 8322, 8323, 8324, 8325, 8356, 8357, 8358, 8359, 8360, 8361, 8368, 8369, 8370, 8371, 8372, 8373, 8668]\n",
+      "51 [98, 100, 188, 189, 499, 501, 507, 511, 8668]\n",
+      "52 [8668]\n",
+      "53 [94, 206, 208, 210, 212, 8668]\n",
+      "54 [8668]\n",
+      "55 [96, 98, 100, 102, 8668]\n",
+      "56 [8668]\n",
+      "57 [8668]\n"
      ]
     }
    ],
    "source": [
     "all_nodes = my_graph.all_nodes()\n",
     "\n",
-    "# available_xfer_matrix = my_graph.get_available_xfers_matrix(context=quartz_context)\n",
-    "for node in all_nodes:\n",
-    "    print(my_graph.available_xfers(context=quartz_context, node=node))"
+    "cnt: int = 0\n",
+    "for i, node in enumerate(all_nodes):\n",
+    "    available_xfers = my_graph.available_xfers(context=quartz_context, node=node)\n",
+    "    print(available_xfers)\n",
+    "    cnt += len(available_xfers)\n",
+    "print(cnt)"
    ]
   },
   {
@@ -179,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
