--- a/experiment/ppo-new/tools/parse_log.ipynb
+++ b/experiment/ppo-new/tools/parse_log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,7 @@
     "        xaxis_title=xaxis_title,\n",
     "        yaxis_title=yaxis_title,\n",
     "        # margin=dict(l=0,r=0,b=0,t=0),\n",
+    "        font=dict(size=16, color='black'),\n",
     "    )\n",
     "    fig.update_layout(\n",
     "        legend=dict(\n",
@@ -110,12 +111,32 @@
     "            xanchor=\"right\", x=0.99,\n",
     "        ),\n",
     "    )\n",
-    "    # fig.update_xaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
-    "    # fig.update_yaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
-    "    # fig.update_layout({\n",
-    "    #     'plot_bgcolor': 'rgba(0, 0, 0, 0)',\n",
-    "    # })\n",
+    "    fig.update_xaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
+    "    fig.update_yaxes(showgrid=False, showline=True, mirror=True, linewidth=1, linecolor='black')\n",
+    "    fig.update_layout({\n",
+    "        'plot_bgcolor': 'rgba(0, 0, 0, 0)',\n",
+    "    })\n",
     "    return fig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_w_pret = read_log('nam_adder_8_w_pret.log')\n",
+    "log_wo_pret = read_log('nam_adder_8_wo_pret.log')\n",
+    "\n",
+    "fig = draw_figure_pair(\n",
+    "    {\n",
+    "        'w/ pretraining': [log_w_pret['time'], log_w_pret['best cost']],\n",
+    "        'w/o pretraining': [log_wo_pret['time'], log_wo_pret['best cost']],\n",
+    "    },\n",
+    "    None, 'Time (sec)', 'Minimum Gate Count',\n",
+    ")\n",
+    "fig.show()\n",
+    "fig.write_image(f'adder_8_comp_pret.pdf', width=700, height=300)"
    ]
   },
   {
@@ -6968,35 +6989,8 @@
     "    'Best cost - iteration', 'iteration', 'best cost',\n",
     ")\n",
     "\n",
-    "# fig = draw_figure_pair(\n",
-    "#     {\n",
-    "#         'k = 4': [log_4['time'], log_4['best cost']],\n",
-    "#         'k = 6': [log_6['time'], log_6['best cost']],\n",
-    "#         'k = 8': [log_8['time'], log_8['best cost']],\n",
-    "#         'k = 10': [log_10['time'], log_10['best cost']],\n",
-    "#     },\n",
-    "#     'Best cost - time', 'time', 'best cost',\n",
-    "# )\n",
-    "\n",
-    "# fig = draw_figure_pair(\n",
-    "#     {\n",
-    "#         'k = 4': [log_4['time'], log_4['iteration']],\n",
-    "#         'k = 6': [log_6['time'], log_6['iteration']],\n",
-    "#         'k = 8': [log_8['time'], log_8['iteration']],\n",
-    "#         'k = 10': [log_10['time'], log_10['iteration']],\n",
-    "#     },\n",
-    "#     'Iteration - time', 'time', 'iteration',\n",
-    "# )\n",
-    "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
