--- a/experiment/qasm_normalizer.ipynb
+++ b/experiment/qasm_normalizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,136 @@
     "# Gate set: rigetti\n",
     "\n",
     "import os\n",
+    "import re\n",
     "from os.path import join, isfile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_dir = os.getcwd() + '/circs/ibm_circs'\n",
+    "output_dir = os.getcwd() + '/circs/ibm_special_angle_circs'\n",
+    "fns = os.listdir(origin_dir)\n",
+    "for fn in fns:\n",
+    "    with open(origin_dir + '/' + fn, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "    \n",
+    "    new_lines = []\n",
+    "    with open(output_dir + '/' + fn, 'w') as of:\n",
+    "        for line in lines:\n",
+    "            if line[:2] != 'rz':\n",
+    "                new_lines.append(line)\n",
+    "            elif line.find(\"rz(-pi/4)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(-pi/4)\", \"tdg\"))\n",
+    "            elif line.find(\"rz(pi/4)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(pi/4)\", \"t\"))\n",
+    "            elif line.find(\"rz(-pi/2)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(-pi/2)\", \"tdg\"))\n",
+    "                new_lines.append(line.replace(\"rz(-pi/2)\", \"tdg\"))\n",
+    "            elif line.find(\"rz(pi/2)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(pi/2)\", \"t\"))\n",
+    "                new_lines.append(line.replace(\"rz(pi/2)\", \"t\"))\n",
+    "            elif line.find(\"rz(-3*pi/4)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(-3*pi/4)\", \"tdg\"))\n",
+    "                new_lines.append(line.replace(\"rz(-3*pi/4)\", \"tdg\"))\n",
+    "                new_lines.append(line.replace(\"rz(-3*pi/4)\", \"tdg\"))\n",
+    "            elif line.find(\"rz(3*pi/4)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(3*pi/4)\", \"t\"))\n",
+    "                new_lines.append(line.replace(\"rz(3*pi/4)\", \"t\"))\n",
+    "                new_lines.append(line.replace(\"rz(3*pi/4)\", \"t\"))\n",
+    "            elif line.find(\"rz(-pi)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(-pi)\", \"z\"))\n",
+    "            elif line.find(\"rz(pi)\") != -1:\n",
+    "                new_lines.append(line.replace(\"rz(pi)\", \"z\"))\n",
+    "            else:\n",
+    "                print(line)\n",
+    "\n",
+    "        of.writelines(new_lines)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_dir = os.getcwd() + '/circs/ibm_extra_circs'\n",
+    "output_dir = os.getcwd() + '/circs/ibm_special_angle_extra_circs'\n",
+    "fns = os.listdir(origin_dir)\n",
+    "for fn in fns:\n",
+    "    with open(origin_dir + '/' + fn, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "    \n",
+    "    new_lines = []\n",
+    "    with open(output_dir + '/' + fn, 'w') as of:\n",
+    "        for line in lines:\n",
+    "            if line[:2] != 'rz':\n",
+    "                new_lines.append(line)\n",
+    "            elif re.findall(r\"[0-9]*\\.5\\*pi\", line) != []:\n",
+    "                f = re.findall(r\"[0-9]*\\.5\", line)[0]\n",
+    "                new_f = float(f)\n",
+    "                while new_f > 2:\n",
+    "                    new_f -= 2\n",
+    "                while new_f < 0:\n",
+    "                    new_f += 2\n",
+    "                if str(new_f) == \"0.5\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "                elif str(new_f) == \"1.5\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"z\"))\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "            elif re.findall(r\"[0-9]*\\.0\\*pi\", line) != []:\n",
+    "                f = re.findall(r\"[0-9]*\\.0\", line)[0]\n",
+    "                new_f = float(f)\n",
+    "                while new_f > 2:\n",
+    "                    new_f -= 2\n",
+    "                while new_f < 0:\n",
+    "                    new_f += 2\n",
+    "                if str(new_f) == \"1.0\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"z\"))\n",
+    "                else:\n",
+    "                    continue\n",
+    "            elif re.findall(r\"[0-9]*\\.25\\*pi\", line) != []:\n",
+    "                f = re.findall(r\"[0-9]*\\.25\", line)[0]\n",
+    "                new_f = float(f)\n",
+    "                while new_f > 2:\n",
+    "                    new_f -= 2\n",
+    "                while new_f < 0:\n",
+    "                    new_f += 2\n",
+    "                if str(new_f) == \"0.25\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "                elif str(new_f) == \"1.25\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"z\"))\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"t\"))\n",
+    "            elif re.findall(r\"[0-9]*\\.75\\*pi\", line) != []:\n",
+    "                f = re.findall(r\"[0-9]*\\.75\", line)[0]\n",
+    "                new_f = float(f)\n",
+    "                while new_f > 2:\n",
+    "                    new_f -= 2\n",
+    "                while new_f < 0:\n",
+    "                    new_f += 2\n",
+    "                if str(new_f) == \"0.75\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"tdg\"))\n",
+    "                elif str(new_f) == \"1.75\":\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"z\"))\n",
+    "                    new_lines.append(line.replace(f\"rz({f}*pi)\", \"tdg\"))\n",
+    "            else:\n",
+    "                print(line)\n",
+    "                pass\n",
+    "\n",
+    "\n",
+    "        of.writelines(new_lines)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,26 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import quartz\n",
     "\n",
@@ -104,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
